# mycel-os

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  release.yml  verify-recipes.yml
community/: CONTRIBUTING.md  index.toml
community/recipes/: ardour.myc  audacity.myc  bat.myc  bitwarden.myc  blender.myc  blueman.myc  bottles.myc  bottom.myc  btop.myc  cliphist.myc  delta.myc  discord.myc  dust.myc  element.myc  eww.myc  eza.myc  fastfetch.myc  fd.myc  firefox.myc  fuzzel.myc  fzf.myc  gimp.myc  gitui.myc  grim.myc  helix.myc  heroic.myc  hyperfine.myc  hyprpicker.myc  imv.myc  inkscape.myc  kdenlive.myc  keepassxc.myc  kitty.myc  lazygit.myc  libreoffice.myc  librewolf.myc  lmms.myc  lutris.myc  mako.myc  mousepad.myc  (+32 more)
mycel/: Cargo.toml
mycel-compose/: Cargo.toml  README.md
mycel-compose/src/: generate.rs  main.rs  schema.rs
mycel-installer/: settings.conf
mycel-iso/: bootstrap.sh  build.sh  live.nix
mycel-pkg/: Cargo.toml
mycel-pkg/src/: main.rs  root.rs
mycel-pkg/src/commands/: build.rs  info.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  submit.rs  verify.rs
mycel-pkg/src/package/: db.rs  mod.rs  parser.rs  schema.rs
mycel/src/: main.rs
mycel/src/commands/: active.rs  boot.rs  check.rs  diff.rs  doctor.rs  edit.rs  get.rs  guide.rs  isolate.rs  lock.rs  mod.rs  network.rs  purge.rs  release.rs  rollback.rs  spore.rs  spread.rs  switch.rs  theme.rs  unlock.rs  update.rs
mycel/src/config/: mod.rs  parser.rs  schema.rs
mycel/src/resolver/: index.rs  mod.rs  overlay.rs
mycel/src/system/: btrfs.rs  limine.rs  mod.rs
(+87 files in other folders)
