[package]
name = "mycel-pkg"
version = "0.1.0"
edition = "2021"
description = "MycelOS package manager"
license = "GPL-3.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
colored = "2"
indicatif = "0.17"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "stream", "rustls-tls"], default-features = false }
tar = "0.4"
flate2 = "1"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
