[package]
name = "mycel"
version = "0.1.0"
edition = "2021"
description = "MycelOS system manager"
license = "GPL-3.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
indicatif = "0.17"
colored = "2"
toml_edit = "0.22"
